--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   , "description" : "LocalDate is a JS library to provide a simple date object without time or timezone information"
   , "main"        : "localdate.js"
   , "scripts"     : {
-      "test"      : "echo \"Error: no test specified\" && exit 1"
+      "test"      : "mocha test/localdate.js"
     }
   , "repository"  : {
         "type"    : "git"
