--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name"            : "localdate"
-  , "version"         : "0.3.0"
-  , "description"     : "JS library to provide a simple date object without time or timezone information"
+  , "version"         : "1.0.0"
+  , "description"     : "JS library to provide an immutable date object that represents an ISO-8601 date (year-month-day)"
   , "main"            : "localdate.js"
   , "scripts"         : {
         "test"        : "mocha test/localdate.js"
@@ -14,6 +14,7 @@
         "date"
       , "localdate"
       , "immutable"
+      , "ISO-8601"
     ]
   , "devDependencies" : {
         "mocha"       : "latest"
